updating perdformance tests, reademe and O complexities